# facugen

./: .gitignore  README.md  pyproject.toml  taglish_train.jsonl
src/facugen/: async_generator.py  cli.py  constants.py  generator.py  label_planner.py  model_resolver.py  models.py  provider_factory.py
src/facugen/core/: __init__.py  benchmarks.py  logging.py  models.py  schema.py  validation.py
src/facugen/generation/: __init__.py  async_gen.py  planner.py  sync.py
src/facugen/prompts/: builder.py  language_rules.py  templates.py
src/facugen/providers/: __init__.py  base.py  factory.py  gemini.py  gemini_client.py  ollama.py  openai.py  resolver.py
